star dark mode fixed

--- a/src/components/ui/ProgressStar/progress-star.scss
+++ b/src/components/ui/ProgressStar/progress-star.scss
@@ -10,6 +10,7 @@
     top: calc(50% + 2px);
     transform: translate(-50%, -50%);
     @extend .font-15;
+    color: var(--gf-text-gray-2x);
 
     &-active {
       @include text-gradient(#797D81);
