--- a/src/views/level/level-gifts-card.scss
+++ b/src/views/level/level-gifts-card.scss
@@ -16,7 +16,7 @@
   padding: 16px 10px;
   background: var(--gf-disable-btn);
   border-radius: 8px;
-  max-width: 300px;
+  //max-width: 300px;
 
   &__image {
     width: 100px;
